--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <!-- Google Font for loader -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 
   <style>
@@ -25,7 +25,7 @@
       overflow-x: hidden;
     }
 
-    /* Loader */
+    /* ✉️ Envelope Loader */
     #loader {
       position: fixed;
       top: 0;
@@ -36,26 +36,65 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: 'Great Vibes', cursive;
-      font-size: 64px;
-      color: #b80f2e;
       z-index: 10000;
-      animation: pulse 2s infinite;
     }
-
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 0.8; }
-      50% { transform: scale(1.1); opacity: 1; }
-      100% { transform: scale(1); opacity: 0.8; }
+    .envelope {
+      position: relative;
+      width: 200px;
+      height: 120px;
+      background: #b80f2e;
+      border-radius: 4px;
+      overflow: hidden;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      animation: openEnvelope 2s ease forwards;
+    }
+    .flap {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 200px;
+      height: 120px;
+      background: #a00c26;
+      transform-origin: top;
+      animation: flapOpen 2s ease forwards;
+      z-index: 2;
+    }
+    .letter {
+      position: absolute;
+      top: 20px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Great Vibes', cursive;
+      font-size: 42px;
+      color: #b80f2e;
+      z-index: 1;
+      opacity: 0;
+      animation: showLetter 2s ease forwards;
+    }
+    @keyframes flapOpen {
+      0% { transform: rotateX(0deg); }
+      100% { transform: rotateX(-180deg); }
+    }
+    @keyframes showLetter {
+      0% { opacity: 0; transform: translateY(30px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes openEnvelope {
+      0% { opacity: 1; }
+      100% { opacity: 0; visibility: hidden; }
     }
 
     .invitation-container {
       position: relative;
-      display: none; /* hidden until loader finishes */
+      display: none;
       max-width: 95%;
       animation: fadeIn 2s ease forwards;
     }
-
     .invitation-container img {
       width: 100%;
       height: auto;
@@ -63,20 +102,13 @@
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    .hotspot {
-      position: absolute;
-      display: block;
-      cursor: pointer;
-      text-decoration: none;
-    }
-
-    /* Hotspot positions */
+    /* Hotspots */
+    .hotspot { position: absolute; display: block; cursor: pointer; text-decoration: none; }
     .church { top: 10%; left: 40%; width: 20%; height: .5%; }
     .oasis { top: 32%; left: 35%; width: 25%; height: .5%; }
     .riah { top: 45.2%; left: 37%; width: 25%; height: .5%; }
@@ -110,16 +142,13 @@
       z-index: 9999;
       transition: background 0.3s ease, transform 0.2s ease;
     }
-    #music-btn:hover {
-      background: rgba(184, 15, 46, 0.9);
-      transform: scale(1.05);
-    }
+    #music-btn:hover { background: rgba(184, 15, 46, 0.9); transform: scale(1.05); }
 
-    /* Falling Petals */
+    /* Falling White + Gold Petals */
     .petal {
       position: fixed;
       top: -50px;
-      font-size: 24px;
+      font-size: 22px;
       animation: fall linear forwards;
       pointer-events: none;
       z-index: 9998;
@@ -133,14 +162,19 @@
   </style>
 </head>
 <body>
-  <!-- Loader -->
-  <div id="loader">N ❤️ G</div>
+  <!-- Loader Envelope -->
+  <div id="loader">
+    <div class="envelope">
+      <div class="flap"></div>
+      <div class="letter">N ❤️ G</div>
+    </div>
+  </div>
 
   <!-- Invitation -->
   <div class="invitation-container" id="invite">
     <img src="NGVFINAL1.jpg" alt="Wedding Invitation">
 
-    <!-- ✅ Clickable overlays -->
+    <!-- Hotspots -->
     <a href="https://maps.app.goo.gl/ZQKweWGzjHopsQ4M7?g_st=aw" target="_blank" class="hotspot church" title="Church"></a>
     <a href="https://maps.app.goo.gl/hTUUWhsSGGaYTgAA7" target="_blank" class="hotspot oasis" title="Oasis"></a>
     <a href="https://maps.app.goo.gl/Taur2JZ4g4Ja76VH9" target="_blank" class="hotspot riah" title="Riah"></a>
@@ -156,59 +190,52 @@
   <button id="music-btn">🎵 Play Music</button>
   <audio id="bg-music" loop>
     <source src="romantic-piano1.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
   </audio>
 
   <script>
-    // Loader
+    // Loader -> show invite after animation
     window.addEventListener("load", () => {
       setTimeout(() => {
         document.getElementById("loader").style.display = "none";
         document.getElementById("invite").style.display = "block";
 
-        // 🌸 Romantic petals
-        for (let i = 0; i < 30; i++) {
+        // Continuous White + Gold Petals
+        setInterval(() => {
           let petal = document.createElement("div");
           petal.classList.add("petal");
-          petal.innerHTML = Math.random() > 0.5 ? "🤍" : "🌸";
+          petal.innerHTML = Math.random() > 0.5 ? "🤍" : "✨";
           petal.style.left = Math.random() * 100 + "vw";
-          petal.style.animationDuration = (5 + Math.random() * 5) + "s";
-          petal.style.fontSize = (16 + Math.random() * 20) + "px";
+          petal.style.animationDuration = (5 + Math.random() * 7) + "s";
+          petal.style.fontSize = (16 + Math.random() * 24) + "px";
           document.body.appendChild(petal);
 
-          setTimeout(() => { petal.remove(); }, 10000);
-        }
-      }, 1500); // Loader shows for 1.5s
+          setTimeout(() => { petal.remove(); }, 12000);
+        }, 400); // new petal every 0.4s
+      }, 2200); // envelope animation lasts ~2.2s
     });
 
     // Countdown
     const eventDate = new Date("Nov 28, 2025 00:00:00").getTime();
-    const timer = setInterval(() => {
+    setInterval(() => {
       const now = new Date().getTime();
       const distance = eventDate - now;
-
       if (distance < 0) {
         document.getElementById("countdown").innerHTML = "💍 The Wedding Day Has Arrived! 🎉";
-        clearInterval(timer);
         return;
       }
-
-      const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-      const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-      const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
+      const days = Math.floor(distance / (1000*60*60*24));
+      const hours = Math.floor((distance % (1000*60*60*24))/(1000*60*60));
+      const minutes = Math.floor((distance % (1000*60*60))/(1000*60));
+      const seconds = Math.floor((distance % (1000*60))/1000);
       document.getElementById("countdown").innerHTML =
-        days + "d " + hours + "h " + minutes + "m " + seconds + "s 🤍";
+        days+"d "+hours+"h "+minutes+"m "+seconds+"s 🤍";
     }, 1000);
 
     // Music Autoplay (Solution 1)
     const music = document.getElementById("bg-music");
     const btn = document.getElementById("music-btn");
-
     window.addEventListener("load", () => {
       music.play().catch(() => {
-        // if blocked, wait for first user interaction
         const startMusic = () => {
           music.play();
           document.removeEventListener("click", startMusic);
@@ -218,24 +245,10 @@
         document.addEventListener("touchstart", startMusic);
       });
     });
-
     btn.addEventListener("click", () => {
-      if (music.paused) {
-        music.play();
-        btn.innerText = "⏸ Pause Music";
-      } else {
-        music.pause();
-        btn.innerText = "🎵 Play Music";
-      }
+      if (music.paused) { music.play(); btn.innerText="⏸ Pause Music"; }
+      else { music.pause(); btn.innerText="🎵 Play Music"; }
     });
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
