--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       const minutes = Math.floor((distance % (1000*60*60))/(1000*60));
       const seconds = Math.floor((distance % (1000*60))/1000);
       document.getElementById("countdown").innerHTML =
-        days+"d "+hours+"h "+minutes+"m "+seconds+"s 🤍";
+        days+"d "+hours+"h "+minutes+"m "+seconds+"s";
     }, 1000);
 
     // Music Autoplay (Solution 1 - hidden)
@@ -127,5 +127,6 @@
   </script>
 </body>
 </html>
+
 
 
