--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <!-- ✅ Social Preview -->
   <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
   <meta property="og:description" content="Join us in celebrating our wedding – details inside!">
-  <meta property="og:image" content="https://boulosna-oss.github.io/NG/logo.png"> <!-- logo for social media -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://nadimxgareen.love/">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://boulosna-oss.github.io/NG/logo.png">
+<meta property="og:image" content="https://boulosna-oss.github.io/NG/logo_banner.png">
+<meta property="og:url" content="https://www.nadimxgareen.love/">
+ 
 
   <style>
     body {
@@ -175,6 +173,7 @@
   </script>
 </body>
 </html>
+
 
 
 
