--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>N & G Wedding Invitation</title>
 
   <!-- ✅ Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="logo.png">
 
   <!-- ✅ Social Preview -->
   <meta property="og:title" content="Nadim & Gareen Wedding Invitation">
@@ -173,6 +173,7 @@
   </script>
 </body>
 </html>
+
 
 
 
