--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       margin-top: 20px;
       font-size: 26px;
       font-weight: bold;
-      color: #eee;
+      color: #314420;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
       text-align: center;
     }
@@ -173,6 +173,7 @@
   </script>
 </body>
 </html>
+
 
 
 
