--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   <!-- Invitation -->
   <div class="invitation-container" id="invite">
     <!-- 🕊️ Flying Dove -->
-    <img id="dove" src="dove.png" alt="Flying Dove">
+   <img id="dove" src="dove_clean.png" alt="Flying Dove">
 
     <!-- Main Invitation -->
     <img src="NGVFINAL1.jpg" alt="Wedding Invitation">
@@ -194,3 +194,4 @@
   </script>
 </body>
 </html>
+
