--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       margin-top: 20px;
       font-size: 26px;
       font-weight: bold;
-      color: #eee;
+      color: #314420;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
       text-align: center;
     }
@@ -152,7 +152,7 @@
       const minutes = Math.floor((distance % (1000*60*60))/(1000*60));
       const seconds = Math.floor((distance % (1000*60))/1000);
       document.getElementById("countdown").innerHTML =
-        days+"d "+hours+"h "+minutes+"m "+seconds+"s 🤍";
+        days+"d "+hours+"h "+minutes+"m "+seconds+"s";
     }, 1000);
 
     // Music Autoplay (Solution 1 - hidden)
@@ -183,6 +183,7 @@
   </script>
 </body>
 </html>
+
 
 
 
