--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
     <a href="https://tally.so/r/wkgg0Z" target="_blank" class="hotspot rsvp" title="RSVP"></a>
     <a href="https://tinyurl.com/Nadim-Gareen" target="_blank" class="hotspot accommodation" title="Accommodation"></a>
     <a href="outfit.pdf" target="_blank" class="hotspot outfit" title="Outfit Inspiration"></a>
+    /* RSVP Glow */
+.hotspot.rsvp {
+  transition: box-shadow 0.4s ease, transform 0.2s ease;
+}
+
+.hotspot.rsvp:hover {
+  box-shadow: 0 0 25px rgba(255, 215, 0, 0.7); /* soft gold glow */
+  transform: scale(1.05); /* gentle zoom */
+  border-radius: 8px; /* rounded edges for the glow */
+}
+
   </div>
 
   <!-- Countdown -->
@@ -183,6 +194,7 @@
   </script>
 </body>
 </html>
+
 
 
 
