--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       overflow-x: hidden;
     }
 
-    /* Logo Only Overlay */
+    /* Fullscreen Overlay with Image */
     #tap-overlay {
       position: fixed;
       top: 0; left: 0;
@@ -43,13 +43,9 @@
       transition: opacity 1s ease;
     }
     #tap-overlay img {
-      width: 180px;
-      animation: pulse 2.5s infinite;
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.08); opacity: 0.9; }
-      100% { transform: scale(1); opacity: 1; }
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .invitation-container {
@@ -101,9 +97,9 @@
   </style>
 </head>
 <body>
-  <!-- Logo Only Overlay -->
+  <!-- Overlay with Fullscreen Image -->
   <div id="tap-overlay">
-    <img src="logo.png" alt="N&G Logo">
+    <img src="123.jpg" alt="Click to Begin">
   </div>
 
   <!-- Invitation -->
@@ -132,7 +128,7 @@
     const invite = document.getElementById("invite");
     const music = document.getElementById("bg-music");
 
-    // Tap logo to enter
+    // Tap anywhere on overlay
     overlay.addEventListener("click", () => {
       overlay.style.opacity = "0";
       setTimeout(() => overlay.style.display = "none", 1000);
@@ -169,3 +165,4 @@
   </script>
 </body>
 </html>
+
