--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>N & G Wedding Invitation</title>
+  <title>NadimXGareen</title>
 
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="logo.png">
@@ -165,4 +165,5 @@
   </script>
 </body>
 </html>
+
 
